--- a/app/classifica16.html
+++ b/app/classifica16.html
@@ -85,89 +85,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>U16</h1>
-                        <h2>Primo circuito #U16SKYSANDVOLLEY</h2>
-                        <p>Con formula 3x3 maschile, sarà il primo circuito con classifica individuale per una categoria under.
-                            <br>
-                            Il circuito avrà le stesse regole del torneo principale skysand: i punti assegnati saranno individuali, quindi sarà possibile cambiare squadra ad ogni tappa.
-                        </p>
-                        <p>
-                            Verranno premiati i primi 6 classificati del circuito!!!<br>
-                            Ad ogni tappa verranno premiate le prime 3 squadre classificate del tabellone gold e la prima del tabellone silver.<br>
-                            Verrà inoltre sempre premiata la <b>squadra più giovane</b> della tappa in corso.<br>
-                            Si riceverà quindi un premio di squadra ad ogni tappa, e un premio individuale per i primi 6 atleti classificati all'interno del circuito.
-                        </p>
-                        <p>
-                            Al circuito <i>#U16SKYSANDVOLLEY</i> potranno prendere parte tutti gli atleti nati dal <b>01/01/2003</b> ed in possesso del certificato medico di sana e robusta costituzione.
-                        </p>
-                        <p>
-                            Ad ogni tappa potranno prendere parte al <b>massimo 12 squadre</b>, le iscrizioni quindi saranno da effettuare prima della giornata del torneo con messaggio whatsapp a Patrick <a href="tel:3394359320">339 4359320</a> o a Lorenzo <a href="tel:3425972773">342 5972773</a>
-                        </p>
-                        <p>
-                            L'iscrizione al circuito <i>#U16SKYSANDVOLLEY</i> potrà essere fatta alla prima tappa a cui si prenderà parte consegnando copia del certificato medico di sana e robusta costituzione unitamente ad una quota di € 5.00<br>
-                            Non sarà chiaramente possibile prendere parte ad alcuna tappa senza prima aver effettuato l'iscrizione.
-                        </p>
-                        <div class="paragrafo">Costi di ogni singola tappa:
-                            <ul>
-                                <li>Iscrizione alla tappa: € 5.00 a testa da pagare il giorno del torneo;</li>
-                                <li>Pranzo convenzionato obbligatorio € 5.00 da pagare il giorno del torneo.</li>
-                            </ul>
-                        </div>
-                        <p>
-                            Per la classifica del circuito verranno applicati dei punteggi individuali sulla base dei piazzamenti di ogni singola tappa:<br>
-                            L’iscrizione alla tappa (senza ottenere le posizioni che valgono punti) vale 1pt a testa.
-                        </p>
-                        <div class="paragrafo">Punteggi:
-                            <ul>
-                                <li>1^ classificata - 25pt a testa</li>
-                                <li>2^ classificata - 20pt a testa</li>
-                                <li>3^ classificata - 15pt a testa</li>
-                                <li>4^ classificata - 12pt a testa</li>
-                                <li>5^ classificata - 10pt a testa</li>
-                                <li>6^ classificata - 8pt a testa</li>
-                                <li>7^ classificata - 6pt a testa</li>
-                                <li>8^ classificata - 4pt a testa</li>
-                            </ul>
-                        </div>
-                        <p>
-                            Il <b>Montepremi</b> del circuito <i>#U16SKYSANDVOLLEY</i> è di € 250.00 (in premi)
-                        </p>
-                        <p>
-                            In caso di più atleti a parimerito in classifica generale, verranno divisi i premi per il numero di ateti con lo stesso punteggio.<br>
-                            Es: 3 atleti classificati 1°, 2° e 3° a parimerito, si divideranno i primi 3 premi della classifica generale<br>
-                            Altro esempio: 2 atleti classificati 6° e 7° a parimerito, si divideranno il 6° premio della classifica generale.
-                        </p>
+                        <h1>Classifica U16</h1>
+
+                        
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="button16">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <a href="/iscrizioni16.html">
-                            Iscrizioni Tappe
-                        </a>
-                    </div>
-                    <div class="col-md-6">
-                        <a href="/classifica16.html">
-                            Classifica
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <section id="poster">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <img src="images/poster16.jpg" alt="poster" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <div class="w-100">
             <div class="divider"></div>
