--- a/app/iscrizioni16.html
+++ b/app/iscrizioni16.html
@@ -99,40 +99,63 @@
 
                                 <div id="collapse2906" class="collapse show" aria-labelledby="heading2906" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <table class="table">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col">#</th>
-                                                    <th scope="col">Nome Squadra</th>
-                                                    <th scope="col">1</th>
-                                                    <th scope="col">2</th>
-                                                    <th scope="col">3</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <th scope="row">1</th>
-                                                    <td>Pdor</td>
-                                                    <td>Federico Cottignoli</td>
-                                                    <td>Filippo Capucci</td>
-                                                    <td>Mattia Roselli</td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">2</th>
-                                                    <td></td>
-                                                    <td>Mattia Bissi</td>
-                                                    <td>Niccolò Contu</td>
-                                                    <td>Mattia Farina</td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">3</th>
-                                                    <td></td>
-                                                    <td>Lorenzo Monti</td>
-                                                    <td>Giacomo Minniti</td>
-                                                    <td>Lorenzo Tommasini</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Nome Squadra</th>
+                                                        <th scope="col">1</th>
+                                                        <th scope="col">2</th>
+                                                        <th scope="col">3</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <th scope="row">1</th>
+                                                        <td>Pdor</td>
+                                                        <td>Federico Cottignoli</td>
+                                                        <td>Filippo Capucci</td>
+                                                        <td>Mattia Roselli</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>Shqiptari</td>
+                                                        <td>Mattia Bissi</td>
+                                                        <td>Niccolò Contu</td>
+                                                        <td>Mattia Farina</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                        <td>Ghirlandina team</td>
+                                                        <td>Lorenzo Monti</td>
+                                                        <td>Giacomo Minniti</td>
+                                                        <td>Lorenzo Tommasini</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">4</th>
+                                                        <td>Sg</td>
+                                                        <td>Gaetano Aiello</td>
+                                                        <td>Francesco Zuccherato</td>
+                                                        <td>Tommaso Strani</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">5</th>
+                                                        <td>Gardini quello falso</td>
+                                                        <td>Nicolò Baldrati</td>
+                                                        <td>Michele Gardini</td>
+                                                        <td>Alberto Visani</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td></td>
+                                                        <td>Samuele Candito</td>
+                                                        <td>Nicola Fucksia</td>
+                                                        <td>Diego Frascio</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -148,20 +171,22 @@
 
                                 <div id="collapse1307" class="collapse" aria-labelledby="heading1307" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <table class="table">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col">#</th>
-                                                    <th scope="col">Nome Squadra</th>
-                                                    <th scope="col">1</th>
-                                                    <th scope="col">2</th>
-                                                    <th scope="col">3</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Nome Squadra</th>
+                                                        <th scope="col">1</th>
+                                                        <th scope="col">2</th>
+                                                        <th scope="col">3</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
 
-                                            </tbody>
-                                        </table>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -177,20 +202,22 @@
 
                                 <div id="collapse2707" class="collapse" aria-labelledby="heading2707" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <table class="table">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col">#</th>
-                                                    <th scope="col">Nome Squadra</th>
-                                                    <th scope="col">1</th>
-                                                    <th scope="col">2</th>
-                                                    <th scope="col">3</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Nome Squadra</th>
+                                                        <th scope="col">1</th>
+                                                        <th scope="col">2</th>
+                                                        <th scope="col">3</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
 
-                                            </tbody>
-                                        </table>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -206,20 +233,22 @@
 
                                 <div id="collapse1008" class="collapse" aria-labelledby="heading1008" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <table class="table">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col">#</th>
-                                                    <th scope="col">Nome Squadra</th>
-                                                    <th scope="col">1</th>
-                                                    <th scope="col">2</th>
-                                                    <th scope="col">3</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Nome Squadra</th>
+                                                        <th scope="col">1</th>
+                                                        <th scope="col">2</th>
+                                                        <th scope="col">3</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
 
-                                            </tbody>
-                                        </table>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -235,20 +264,22 @@
 
                                 <div id="collapse2408" class="collapse" aria-labelledby="heading2408" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <table class="table">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col">#</th>
-                                                    <th scope="col">Nome Squadra</th>
-                                                    <th scope="col">1</th>
-                                                    <th scope="col">2</th>
-                                                    <th scope="col">3</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Nome Squadra</th>
+                                                        <th scope="col">1</th>
+                                                        <th scope="col">2</th>
+                                                        <th scope="col">3</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
 
-                                            </tbody>
-                                        </table>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
