--- a/app/skysand.html
+++ b/app/skysand.html
@@ -177,6 +177,23 @@
             </div>
         </section>
 
+        <section id="buttonSky">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="/iscrizioni.html">
+                            Iscrizioni Tappe
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="/classifica.html">
+                            Classifica
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <div class="w-100">
             <div class="divider"></div>
         </div>
