--- a/app/iscrizioni.html
+++ b/app/iscrizioni.html
@@ -114,31 +114,31 @@
                                                 <tbody>
                                                     <tr>
                                                         <th scope="row">1</th>
-                                                        <td></td>
+                                                        <td>Romin lo dici a tua sorella</td>
                                                         <td>Patrick Bandini</td>
-                                                        <td>Lorenzo Grottoli</td>
+                                                        <td>Grottoli/Pollino</td>
                                                         <td>Matteo Aldini</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">2</th>
-                                                        <td></td>
+                                                        <td>Cassoni</td>
                                                         <td>Matteo Bologna</td>
                                                         <td>Stefano Marchini</td>
                                                         <td>Samuel Frascio</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">3</th>
-                                                        <td></td>
+                                                        <td>Così a caso</td>
                                                         <td>Giovanni Santoni</td>
                                                         <td>Luca Boscherini</td>
                                                         <td>Lorenzo Filippi</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">4</th>
-                                                        <td></td>
+                                                        <td>Saturno</td>
                                                         <td>Lorenzo Monti</td>
                                                         <td>Luca Poletti</td>
-                                                        <td></td>
+                                                        <td>Alex Poletti</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">5</th>
@@ -156,26 +156,26 @@
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">7</th>
-                                                        <td></td>
+                                                        <td>Team immuni</td>
                                                         <td>Luca Iacconi</td>
-                                                        <td>Luca Venturini</td>
-                                                        <td>Federico Pollino</td>
+                                                        <td>Luca Battistini</td>
+                                                        <td>Luca Campedelli</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">8</th>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
+                                                        <td>Mojitos</td>
+                                                        <td>Matteo Pirazzoli</td>
+                                                        <td>Filippo Rontini</td>
+                                                        <td>Filippo Sampaoli</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">9</th>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
+                                                        <td>Hanno perso a tavolino</td>
+                                                        <td>Federico Silvagni</td>
+                                                        <td>Marco Sangiorgi</td>
+                                                        <td>Sean Alessi</td>
                                                     </tr>
-                                                    <tr>
+                                                    <!-- <tr>
                                                         <th scope="row">10</th>
                                                         <td></td>
                                                         <td></td>
@@ -223,7 +223,7 @@
                                                         <td></td>
                                                         <td></td>
                                                         <td></td>
-                                                    </tr>
+                                                    </tr> -->
 
                                                 </tbody>
                                             </table>
@@ -391,19 +391,19 @@
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">2</th>
-                                                        <td></td>
+                                                        <td>Le Bionde</td>
                                                         <td>Michela Alfieri</td>
                                                         <td>Sara Corradin</td>
-                                                        <td>Vania Baravelli</td>
+                                                        <td>Carlotta Bendandi</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">3</th>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
+                                                        <td>Li vuoi quei kiwi</td>
+                                                        <td>Eleonora Nespeca</td>
+                                                        <td>Sara Savini</td>
+                                                        <td>Elisa Bertini</td>
                                                     </tr>
-                                                    <tr>
+                                                    <!-- <tr>
                                                         <th scope="row">4</th>
                                                         <td></td>
                                                         <td></td>
@@ -437,7 +437,7 @@
                                                         <td></td>
                                                         <td></td>
                                                         <td></td>
-                                                    </tr>
+                                                    </tr> -->
                                                 </tbody>
                                             </table>
                                         </div>
