--- a/app/iscrizioni16.html
+++ b/app/iscrizioni16.html
@@ -153,6 +153,48 @@
                                                         <td>Nicola Fucksia</td>
                                                         <td>Diego Frascio</td>
                                                     </tr>
+                                                    <tr>
+                                                        <th scope="row">7</th>
+                                                        <td>The Ravens</td>
+                                                        <td>Lorenzo Pollini</td>
+                                                        <td>Bernardo Natali</td>
+                                                        <td>Jacopo Bandini</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">8</th>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">9</th>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">10</th>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">11</th>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">12</th>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
